--- a/catalog.html
+++ b/catalog.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body class="page">
   <header class="main-header">
     <div class="container">
       <div class="header-top clearfix">
