Добавил интерактивную карту

--- a/index.html
+++ b/index.html
@@ -272,8 +272,6 @@
 
         </div>
       </section>
-
-      <script async src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
     </main>
 
     <div class="map" id="map-canvas">
@@ -366,6 +364,8 @@
       </form>
     </div>
   </div>
+
+  <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
   <script src="js/main.js"></script>
 </body>
 
