Закончил стилизацию двух страниц. Оптимизировал подрузку svg через data:uri

--- a/index.html
+++ b/index.html
@@ -168,9 +168,9 @@
 
       </section>
 
-      <div class="products-promo">
-        <div class="products-promo__wrapper" role="List" tabindex="0">
-          <div class="product products-promo__item products-promo__item--hit" role="Listitem" tabindex="0">
+      <div class="products">
+        <div class="products__wrapper" role="List" tabindex="0">
+          <div class="product products__item products__item--hit" role="Listitem" tabindex="0">
             <div class="product__content">
               <img class="product__picture" src="img/icecream-orange-jam.png" width="267" height="267" alt="ice-cream-orange">
               <div class="product__price">
@@ -184,7 +184,7 @@
             <a class="btn btn--m btn--orange btn--product" href="#">Быстрый просмотр</a>
           </div>
 
-          <div class="product products-promo__item products-promo__item--hit" role="Listitem" tabindex="0">
+          <div class="product products__item products__item--hit" role="Listitem" tabindex="0">
             <div class="product__content">
               <img class="product__picture" src="img/icecream-pieces-chocolate.png" width="267" height="267" alt="ice-cream-pieces-chocolate">
               <div class="product__price">
@@ -198,7 +198,7 @@
             <a class="btn btn--m btn--orange btn--product" href="#">Быстрый просмотр</a>
           </div>
 
-          <div class="product products-promo__item products-promo__item--hit" role="Listitem" tabindex="0">
+          <div class="product products__item products__item--hit" role="Listitem" tabindex="0">
             <div class="product__content">
               <img class="product__picture" src="img/icecream-white-chocolate.png" width="267" height="267" alt="">
               <div class="product__price">
@@ -212,7 +212,7 @@
             <a class="btn btn--m btn--orange btn--product" href="#">Быстрый просмотр</a>
           </div>
 
-          <div class="product products-promo__item products-promo__item--hit" role="Listitem" tabindex="0">
+          <div class="product products__item products__item--hit" role="Listitem" tabindex="0">
             <div class="product__content">
               <img class="product__picture" src="img/icecream-creme-brulee.png" width="267" height="267" alt="ice-cream-creme-brulee">
               <div class="product__price">
